<?xml version="1.0"?>
<package format="2">
  <name>beam_constraints</name>
  <version>0.4.0</version>
  <description>fuse constraints for sensor models in beam_models</description>

  <author email="nicholas.c.charron@gmail.com">Nick Charron</author>
  <maintainer email="nicholas.c.charron@gmail.com">Nick Charron</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>libceres-dev</depend>
  <depend>eigen</depend>
  <depend>geometry_msgs</depend>
  <depend>pluginlib</depend>
  <depend>roscpp</depend>
  <depend>tf2</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>tf2_ros</depend>

  <depend>fuse_core</depend>
  <depend>fuse_graphs</depend>
  <depend>fuse_variables</depend>
  <depend>beam_variables</depend>
  <depend>fuse_constraints</depend>
  <depend>beam_slam_common</depend>

  <test_depend>roslint</test_depend>
  <test_depend>rostest</test_depend>

  <export>
    <fuse_core plugin="${prefix}/fuse_plugins.xml" />
  </export>
</package>
