<?xml version="1.0"?>
<?xml-model
  href="http://download.ros.org/schema/package_format3.xsd"
  schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>beam_launch</name>
  <version>0.0.1</version>
  <description>Package containing launch and config files for beam slam</description>

  <author email="author@beamrobotics.com">beam_author</author>
  <maintainer email="maintainer@beamrobotics.com">beam_maintainer</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roslaunch</depend>
  <depend>fuse_optimizers</depend>


</package>
