<?xml version="1.0"?>
<package format="2">
  <name>beam_variables</name>
  <version>0.4.0</version>
  <description>
    The beam_variables package provides custom fuse publishers that are not available from fuse.
  </description>

  <author email="nicholas.c.charron@gmail.com">Nick Charron</author>
  <maintainer email="nicholas.c.charron@gmail.com">Nick Charron</maintainer>

  <license>Proprietary</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>fuse_core</depend>
  <depend>fuse_variables</depend>

  <depend>libceres-dev</depend>
  <depend>pluginlib</depend>
  <depend>roscpp</depend>

  <export>
    <fuse_core plugin="${prefix}/fuse_plugins.xml" />
  </export>
</package>