<?xml version="1.0"?>
<package format="2">
  <name>bs_common</name>
  <version>0.4.0</version>
  <description>
    Package for common code used in beam_slam, e.g., parameter classes
  </description>

  <maintainer email="nicholas.c.charron@gmail.com">Nick Charron</maintainer>
  <author email="nicholas.c.charron@gmail.com">Nick Charron</author>

  <license>Proprietary</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>libbeam</build_depend>

  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>

  <depend>fuse_variables</depend>
  <depend>fuse_constraints</depend>
  <depend>fuse_models</depend>

  <depend>bs_variables</depend>
  
</package>
